prevent title highlighted underline from overflowing page

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -128,6 +128,7 @@ footer.footer {
 		content: '';
 		background-color: $main;
 		width: 120%;
+		max-width: 90vw;
 		height: .1em;
 		position: absolute;
 		bottom: -10px;
